--- a/hugo.yaml
+++ b/hugo.yaml
@@ -185,7 +185,7 @@ params:
     # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
     developer:
       - name: GitHub
-        url: https://github.com/octocompose/octocompose
+        url: https://github.com/octocompose/octoctl
         icon: fab fa-github
         desc: Development takes place here!
       - name: "Matrix (Developer)"
